Enable JDK50Impl regex test on Java 21